--- a/Scarb.toml
+++ b/Scarb.toml
@@ -3,11 +3,9 @@ name = "amm_governance"
 version = "0.1.0"
 edition = "2023_11"
 
-# See more keys and their definitions at https://docs.swmansion.com/scarb/docs/reference/manifest.html
-
 [dependencies]
 cubit = { git = "https://github.com/influenceth/cubit.git", commit = "62756082bf2555d7ab25c69d9c7bc30574ff1ce8" }
-konoha = { git = "https://github.com/carmineoptions/konoha", branch = "staking" }
+konoha = { git = "https://github.com/carmineoptions/konoha", commit = "64116ab0380e329ce26ea8dcb89658e7a4a07807" }
 openzeppelin = { git = "https://github.com/OpenZeppelin/cairo-contracts.git", tag = "v0.10.0" }
 starknet = ">=2.0.0"
 
@@ -24,6 +22,11 @@ sort-module-level-items = true
 name = "MAINNET"
 url = "$MAINNET_NODE_URL"
 block_id.tag = "Latest"
+
+[[tool.snforge.fork]]
+name = "MAINNET_PROP168"
+url = "$MAINNET_NODE_URL"
+block_id.number = "1148540"
 
 [[tool.snforge.fork]]
 name = "MAINNET_BEFORE_UPGRADE_TO_KONOHA"
