--- a/Scarb.toml
+++ b/Scarb.toml
@@ -36,6 +36,11 @@ url = "$MAINNET_NODE_URL"
 block_id.number = "818610"
 
 [[tool.snforge.fork]]
+name = "MAINNET_UPGRADE_REMUS"
+url = "$MAINNET_NODE_URL"
+block_id.number = "1228005"
+
+[[tool.snforge.fork]]
 name = "SEPOLIA"
 url = "$SEPOLIA_NODE_URL"
 block_id.tag = "Latest"
